--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,9 @@ set(CMAKE_C_STANDARD 99)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}  -Wall -Werror -Wextra")
 file(GLOB LIBFT ft_printf/*.c ft_printf/*.h ft_printf/libft/*.c ft_printf/libft/*.h)
-set(SOURCES  lem-in.c
+set(SOURCES lem_in.c
         check_line.c
-        function_lem-in.c
+        function_lem_in.c
         validation.c
         pars_line.c
         algorithm.c short_way.c go_ants.c track_record.c room_sharing.c join_room.c to_position.c)
